--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,48 @@
-div.top-nav {
-  height: 200px;
-  background-color: #80cbc4;
+div#header {
+  height: 100px;
+  font-size: 50px;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: rgba(57,43,88,0.2);
+}
+
+div#header h1 {
+  color: white;
+}
+
+div#picture {
+  background-image: url('../img/th.png');
+  height: 75px;
+  width: 75px;
+  background-size: cover;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 12.5px 0 12.5px 20px;
+}
+
+div#logo {
+  display: inline-block;
+  margin: 12.5px 0;
+}
+
+div#logo h1 {
+  font-size: 50px;
+  margin: 0;
+  display: inline-block;
+}
+
+.carrot {
+  animation: cycle 10s linear infinite;
+  font-family: 'Raleway', sans-serif;
+}
+
+@keyframes cycle {
+  0% {
+    color: white;
+  } 50% {
+      color: #7986CB;
+  } 100% {
+    color: white;
+  }
 }
 
 ul {
@@ -16,15 +58,60 @@ a {
   color: white;
 }
 
+div.quote {
+  margin-top: 125px;
+}
+
+div.quote-text {
+  background-color: rgba(255,255,255,0.5);
+  color: rgba(121,134,203,1);
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
+}
+
+div.quote-text p{
+  padding: 10px;
+}
+
+div.case {
+  margin-top: 125px;
+}
+
+div.case h1 {
+  font-size: 40px;
+  display: inline-block;
+  background-color: rgba(121,134,203,0.7);
+  color: rgba(255,255,255,1);
+  font-family: 'Raleway', sans-serif;
+  padding: 10px 20px;
+}
+
+div.case-block {
+  margin-top: 20px;
+  background-color: rgba(121,134,203,0.7);
+  color: rgba(255,255,255,1);
+  font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+div.case-block p {
+  padding: 0 10px;
+}
+
+#cb-image-1 {
+  height: 100%;
+}
 
 .fullscreen-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -100;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
 }
 
 .fullscreen-bg__video {
@@ -33,19 +120,19 @@ a {
   left: 50%;
   width: auto;
   height: auto;
-  opacity: 0.7;
+  opacity: 0.8;
   min-width: 100%;
   min-height: 100%;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  /* background-color: rgba(255,60,0,0.5) */
+  background-color: #F7EDE2;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 600px) {
   .fullscreen-bg {
-    /* background-color: rgba(255,60,0,0.35); */
+    background-color: #F7EDE2;
   }
 
   .fullscreen-bg__video {
