--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,44 @@ div#header {
   z-index: 10;
 }
 
+.linkedin {
+  background-size: cover;
+  background-image: url('../img/linkedin.png');
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  position: fixed;
+  top: 25px;
+  right: 85px;
+}
+
+.github {
+  background-size: cover;
+  background-image: url('../img/github.png');
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  position: fixed;
+  top: 25px;
+  right: 20px;
+  border-radius: 50%;
+}
+
+div#footer {
+  height: 100px;
+  font-size: 50px;
+  font-family: 'Roboto', sans-serif;
+  background-color: rgba(30,30,30,1);
+  margin: 0;
+  width: 100%;
+  z-index: 10;
+  font-size: 20px;
+}
+
+div#footer div.carrot {
+  margin-top: 35px;
+}
+
 div#header h1 {
   color: white;
 }
@@ -156,6 +194,14 @@ div.case-block p {
 
 #cb-image-4 {
   background-image: url('../img/roi-rec.png');
+}
+
+#cb-image-5 {
+  background-image: url('../img/prod-reqs2.png');
+}
+
+#cb-image-6 {
+  background-image: url('../img/prod-reqs1.png');
 }
 
 #cb-image-7 {
