--- a/css/style.css
+++ b/css/style.css
@@ -38,18 +38,19 @@ div#header {
 }
 
 div#footer {
-  height: 100px;
+  height: 75px;
   font-size: 50px;
   font-family: 'Roboto', sans-serif;
   background-color: rgba(30,30,30,1);
-  margin: 0;
+  margin: 125px 0 0 0;
   width: 100%;
   z-index: 10;
   font-size: 20px;
 }
 
-div#footer div.carrot {
-  margin-top: 35px;
+div#footer div {
+  margin-top: 23px;
+  color: white;
 }
 
 div#header h1 {
@@ -228,6 +229,7 @@ div.case-block p {
   left: 0;
   overflow: hidden;
   z-index: -100;
+  opacity: 0.8;
 }
 
 .fullscreen-bg__video {
