--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ div.case-block p {
   overflow: hidden;
   z-index: -100;
   opacity: 0.8;
+  background-size: cover;
 }
 
 .fullscreen-bg__video {
