--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,19 @@ div#header {
 }
 
 div#footer {
-  height: 75px;
-  font-size: 50px;
+  height: 100px;
+  font-size: 30px;
   font-family: 'Roboto', sans-serif;
   background-color: rgba(30,30,30,1);
   margin: 125px 0 0 0;
   width: 100%;
   z-index: 10;
   font-size: 20px;
+}
+
+div#footer div span {
+  font-size: 15px;
+  font-style: italic;
 }
 
 div#footer div {
