--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+.fullscreen-bg {
+  background-color: rgb(240,240,240);
+  z-index: -100;
+}
+
 div#header {
   height: 100px;
   font-size: 50px;
   font-family: 'Roboto', sans-serif;
-  background-color: rgba(30,30,50,0.2);
+  background-color: rgba(141,153,174,0.2);
   top: 0;
   position: fixed;
   width: 100%;
@@ -170,7 +175,6 @@ div.quote-text {
   color: rgb(250,250,250);
   text-align: center;
   font-size: 20px;
-  /* font-family: 'Raleway', sans-serif; */
   font-style: italic;
 }
 
@@ -291,9 +295,6 @@ div.case-block p {
 }
 
 @media (max-width: 600px) {
-  .fullscreen-bg {
-    background-color: #8D99AE;
-  }
 
   .fullscreen-bg__video {
     display: none;
