--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-.fullscreen-bg {
-  background-color: rgb(240,240,240);
-  z-index: -100;
+body {
+  background-color: rgba(230,210,178,0.5);
 }
 
 div#header {
@@ -146,7 +145,7 @@ div.intro {
 
 div.intro-text {
   background-color: rgba(129, 205, 204,0.7);
-  color: rgb(41,53,74);
+  color: rgb(255,255,255);
   text-align: center;
   font-size: 35px;
   font-family: 'Raleway', sans-serif;
@@ -275,8 +274,6 @@ div.case-block p {
   left: 0;
   overflow: hidden;
   z-index: -100;
-  opacity: 0.8;
-  background-size: cover;
 }
 
 .fullscreen-bg__video {
