--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ div.intro {
 
 div.intro-text {
   background-color: rgba(129, 205, 204,0.7);
-  color: rgb(255,255,255);
+  color: rgb(41,53,74,1);
   text-align: center;
   font-size: 35px;
   font-family: 'Raleway', sans-serif;
@@ -274,6 +274,7 @@ div.case-block p {
   left: 0;
   overflow: hidden;
   z-index: -100;
+  background-size: cover;
 }
 
 .fullscreen-bg__video {
