--- a/views/process.html
+++ b/views/process.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Taylor Halsted</title>
+  <title>Taylor Halsted | Process</title>
   <link rel="shortcut icon"
        href="../img/th.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:800|Josefin+Sans:400" rel="stylesheet">
