--- a/css/style.css
+++ b/css/style.css
@@ -401,13 +401,14 @@ ul.menu ul li {
 }
 
 .bounce {
+  opacity: 0.7;
   position: relative;
   left:50%;
   bottom:0;
-  margin-top:-55px;
-  margin-left:-40px;
-  height:80px;
-  width:80px;
+  margin-top:-40px;
+  margin-left:-25px;
+  height:50px;
+  width:50px;
   background-image: url('../img/arrow.png');
   background-size: cover;
   -webkit-animation:bounce 1s ease-in-out infinite;
