--- a/views/work.html
+++ b/views/work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Taylor Halsted | Work</title>
+  <title>Taylor Halsted | Portfolio</title>
   <link rel="shortcut icon"
        href="../img/th.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:800|Josefin+Sans:400" rel="stylesheet">
@@ -45,7 +45,7 @@
     <div class="col s1"></div>
     <div class="col s10 intro-text z-depth-1">
       <p>Portfolio of work is on the way...<br>
-      <span>stop by again soon</span>
+      <span>— stop by again soon —</span>
       </p>
     </div>
     <div class="col s2"></div>
