--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,94 @@ div#header {
   z-index: 10;
 }
 
+div#header-hs {
+  height: 100px;
+  font-size: 50px;
+  font-family: 'Muli', sans-serif;
+  background-color: rgba(250,250,250,1);
+  top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+
+div#header-hs div {
+  margin-top: 10px;
+  color: #f47d30;
+  font-variant: small-caps;
+}
+
+div#hs-demo-pic {
+  background-image: url('../img/hs-demo-alex.png');
+  height: 75px;
+  width: 75px;
+  background-size: cover;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 15px 0 12.5px 20px;
+}
+
+div#tracker {
+  height: 400px;
+  width: 700px;
+  background-color: #FED587;
+  margin: 150px auto 0 auto;
+  z-index: 0;
+}
+
+div.circler {
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  background-color: #FED587;
+  border: 3px solid #CBAB6C;
+  border-radius: 50%;
+  display: inline-block;
+  z-index: 2;
+}
+
+div.circler h1 {
+  font-size: 30px;
+  margin-top: 9px;
+  text-align: center;
+  color: rgb(250,250,250);
+}
+
+div.hs-spacer {
+  position: absolute;
+  margin-top: 197px;
+  width: 700px;
+  height: 5px;
+  background-color: #CBAB6C;
+  display: inline-block;
+  z-index: 1;
+}
+
+div#footer-hs {
+  height: 100px;
+  font-size: 30px;
+  font-family: 'Muli', sans-serif;
+  background-color: rgba(30,30,50,1);
+  margin: 50px 0 0 0;
+  width: 100%;
+  z-index: 10;
+  font-size: 20px;
+}
+
+div#footer-hs div span {
+  font-size: 15px;
+  font-style: italic;
+}
+
+div#footer-hs div {
+  margin-top: 23px;
+  color: rgb(250,250,250);
+}
+
+a#hs-link {
+  color: #f47d30;
+}
+
 .resume {
   background-size: cover;
   background-image: url('../img/cv.png');
