--- a/views/headspace/hs-demo.html
+++ b/views/headspace/hs-demo.html
@@ -15,18 +15,32 @@
 </head>
 <body>
   <div class="row z-depth-2" id="header-hs">
-    <div class="snippet" id="snippet1">
-      <div class="snippet-header">
-
-      </div>
-      <div class="snippet-picture">
-    </div>
-    <div class="col s1" id="hs-demo-pic"></div>
+    <div class="col s1 z-depth-1" id="hs-demo-pic"></div>
     <div class="col s10">
       Welcome back, Alex!
     </div>
   </div>
   <div id="tracker">
+    <div class="snippet z-depth-1" id="snippet1">
+      <div class="snippet-picture z-depth-1" id="snippet-pic1"></div>
+      <div class="snippet-header">
+      </div>
+      <p></p>
+    </div>
+    <div class="snippet z-depth-1" id="snippet2">
+      <div class="snippet-picture z-depth-1" id="snippet-pic2"></div>
+      <div class="snippet-header">
+        how are you feeling?
+      </div>
+      <p></p>
+    </div>
+    <div class="snippet z-depth-1" id="snippet3">
+      <div class="snippet-picture z-depth-1" id="snippet-pic3"></div>
+      <div class="snippet-header">
+        how are you feeling?
+      </div>
+      <p></p>
+    </div>
     <div class="hs-spacer"></div>
   </div>
   <div class="row" id="footer-hs">
