--- a/views/headspace/hs-demo.html
+++ b/views/headspace/hs-demo.html
@@ -14,7 +14,8 @@
   <script src="../../js/script.js" type="text/javascript" defer></script>
 </head>
 <body>
-  <div class="row z-depth-2" id="header-hs">
+  <div class="shader"></div>
+  <div class="row z-depth-1" id="header-hs">
     <div class="col s1 z-depth-1" id="hs-demo-pic"></div>
     <div class="col s10">
       Welcome back, Alex!
@@ -30,16 +31,21 @@
     <div class="snippet z-depth-1" id="snippet2">
       <div class="snippet-picture z-depth-1" id="snippet-pic2"></div>
       <div class="snippet-header">
-        how are you feeling?
       </div>
       <p></p>
     </div>
     <div class="snippet z-depth-1" id="snippet3">
       <div class="snippet-picture z-depth-1" id="snippet-pic3"></div>
       <div class="snippet-header">
-        how are you feeling?
+        How are you feeling about meditating?
       </div>
       <p></p>
+    </div>
+    <div class="meditation z-depth-2">
+      <p>Meditation in progress...</p>
+      <div class="progress">
+        <div class="indeterminate"></div>
+      </div>
     </div>
     <div class="hs-spacer"></div>
   </div>
