--- a/views/headspace/hs-demo.html
+++ b/views/headspace/hs-demo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Taylor Halsted</title>
+  <title>Taylor Halsted | Headspace Feature Demo</title>
   <link rel="shortcut icon"
        href="../../img/th.png">
   <link href="https://fonts.googleapis.com/css?family=Muli:200" rel="stylesheet">
@@ -27,12 +27,14 @@
       <div class="snippet-header">
       </div>
       <p></p>
+      <span></span>
     </div>
     <div class="snippet z-depth-1" id="snippet2">
       <div class="snippet-picture z-depth-1" id="snippet-pic2"></div>
       <div class="snippet-header">
       </div>
       <p></p>
+      <span></span>
     </div>
     <div class="snippet z-depth-1" id="snippet3">
       <div class="snippet-picture z-depth-1" id="snippet-pic3"></div>
