--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ div.snippet {
   position: absolute;
   font-family: 'Muli', sans-serif;
   display: inline-block;
-  width: 300px;
+  width: 320px;
   height: 75px;
   background-color: rgba(250,250,250,1);
   border-radius: 5px;
@@ -116,8 +116,19 @@ div.snippet-picture {
   border-radius: 50%;
   height: 55px;
   width: 55px;
-  margin-left: 266px;
+  margin-left: 280px;
   margin-top:  -26px;
+}
+
+div.snippet span {
+  position: absolute;
+  width: 100px;
+  margin-top: 35px;
+  margin-left: -70px;
+  font-size: 9px;
+  color: rgba(180,180,180,1);
+  font-style: italic;
+  text-align: right;
 }
 
 div#snippet1 {
