--- a/views/process.html
+++ b/views/process.html
@@ -45,7 +45,7 @@
     <div class="col s1"></div>
     <div class="col s10 intro-text z-depth-1">
       <p>How do I think about Product Management?<br>
-      <span>— see my process for building simple products that empower users —</span>
+      <span>see my process for building simple products that empower users</span>
       </p>
     </div>
     <div class="col s2"></div>
