--- a/views/work.html
+++ b/views/work.html
@@ -23,17 +23,6 @@
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
-    <!--   <ul class="menu carrot">
-        <li><a id="main-list" href="#">learn_more</a>
-          <ul>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Define User Problems</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Assess Product Opportunity</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Develop Product Requirements</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframe Concepts</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmap</a></li>
-         </ul>
-        </li>
-      </ul> -->
       <div class="link-icon resume z-depth-2"></div>
       <div class="white-box1"></div>
       <div class="link-icon linkedin z-depth-2"></div>
@@ -41,14 +30,43 @@
       <div class="white-box2"></div>
     </div>
   </div>
-  <div class="row intro">
-    <div class="col s1"></div>
-    <div class="col s10 intro-text z-depth-1">
-      <p>Portfolio of work is on the way...<br>
-      <span>— stop by again soon —</span>
-      </p>
+  <div class="row work-main container">
+    <div class="col s6" id="work-pane-left">
+      <div class="col s12 work-pane" id="work-pane1">
+        <div class="darkness valign-wrapper">
+          <p class="valign">HustlePuffin
+          <br>
+            <span>— view —</span>
+          </p>
+        </div>
+      </div>
+      <div class="col s12 work-pane" id="work-pane3">
+        <div class="darkness valign-wrapper">
+          <p class="valign">Connect Four
+          <br>
+            <span>— view —</span>
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="col s2"></div>
+    <div class="col s6" id="work-pane-right">
+      <div class="col s12 work-pane" id="work-pane2">
+        <div class="darkness valign-wrapper">
+          <p class="valign">Headspace Feature Proposal
+          <br>
+            <span>— view —</span>
+          </p>
+        </div>
+      </div>
+      <div class="col s12 work-pane" id="work-pane4">
+        <div class="darkness valign-wrapper">
+          <p class="valign">Portfolio Site
+          <br>
+            <span>— view —</span>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="row" id="footer">
       <div class="col s12">
