--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ div.intro-text p span{
 }
 
 div.intro-main {
-  margin-top: 200px;
+  margin-top: 220px;
 }
 
 div.intro-text-main {
@@ -610,5 +610,74 @@ ul.menu ul li {
 }
 
 @-webkit-keyframes bounce {
-  50%      { bottom:20px; }
+  50% { bottom:20px; }
+}
+
+.makeSpace {
+  height: 35px;
+}
+
+.work-pane {
+  height: 400px;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 45px;
+}
+
+.darkness:hover {
+  background-color: rgba(0,0,0,0.7);
+  color: rgba(250,250,250,1);
+  cursor: pointer;
+}
+
+.darkness {
+  padding: 0 10px;
+  display: inline-block;
+  margin: 0;
+  width: 100%;
+  height: 400px;
+  color: rgba(250,250,250,0);
+  line-height: 45px;
+  text-align: center;
+}
+
+.darkness p {
+  width: 100%;
+}
+
+.darkness span {
+  font-size: 25px;
+}
+
+#work-pane-left {
+  margin: 150px 0 0 0;
+  padding: 0;
+}
+
+#work-pane-right {
+  margin: 250px 0 0 0;
+  padding: 0;
+}
+
+#work-pane1 {
+  background-image: url('../img/hp-main3.png');
+  background-size: cover;
+  padding: 0;
+}
+
+#work-pane2 {
+  background-image: url('../img/hs-main1.png');
+  background-size: cover;
+  padding: 0;
+}
+
+#work-pane3 {
+  background-image: url('../img/cf-main1.png');
+  background-size: cover;
+  padding: 0;
+}
+
+#work-pane4 {
+  background-image: url('../img/th-main1.png');
+  background-size: cover;
+  padding: 0;
 }
