--- a/views/work.html
+++ b/views/work.html
@@ -30,8 +30,9 @@
       <div class="white-box2"></div>
     </div>
   </div>
-  <div class="row work-main container">
-    <div class="col s6" id="work-pane-left">
+  <div class="row work-main">
+    <div class="col s1"></div>
+    <div class="col s5" id="work-pane-left">
       <div class="col s12 work-pane" id="work-pane1">
         <div class="darkness valign-wrapper">
           <p class="valign">HustlePuffin
@@ -49,7 +50,7 @@
         </div>
       </div>
     </div>
-    <div class="col s6" id="work-pane-right">
+    <div class="col s5" id="work-pane-right">
       <div class="col s12 work-pane" id="work-pane2">
         <div class="darkness valign-wrapper">
           <p class="valign">Headspace Feature Proposal
@@ -67,6 +68,7 @@
         </div>
       </div>
     </div>
+    <div class="col s1"></div>
   </div>
   <div class="row" id="footer">
       <div class="col s12">
