--- a/views/work.html
+++ b/views/work.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col s12 work-pane" id="work-pane4">
         <div class="darkness valign-wrapper">
-          <p class="valign">Portfolio Site
+          <p class="valign">Portfolio Website
           <br>
             <span>— view —</span>
           </p>
