--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Taylor Halsted | Process</title>
+  <title>Taylor Halsted | Headspace Case Study</title>
   <link rel="shortcut icon"
-       href="../img/th.png">
+       href="../../img/th.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:800|Josefin+Sans:400" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/materialize.min.css">
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-  <script src="../js/script.js" type="text/javascript"></script>
+  <script src="../../js/script.js" type="text/javascript"></script>
 
   <!-- Google Analytics -->
   <script>
@@ -27,15 +27,15 @@
 </head>
 <body>
   <div class="fullscreen-bg">
-    <video loop muted autoplay poster="../img/poster.png" class="fullscreen-bg__video">
-        <source src="../img/th.mp4" type="video/mp4">
+    <video loop muted autoplay poster="../../img/poster.png" class="fullscreen-bg__video">
+        <source src="../../img/th.mp4" type="video/mp4">
     </video>
   </div>
   <div class="row z-depth-2" id="header">
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
-      <ul class="menu carrot">
+     <!--  <ul class="menu carrot">
         <li><a id="main-list" href="#">learn_more</a>
           <ul>
             <li class="itemer z-depth-1"><a class="lister" href="#">Define User Problems</a></li>
@@ -45,7 +45,7 @@
             <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmap</a></li>
          </ul>
         </li>
-      </ul>
+      </ul> -->
       <div class="link-icon resume z-depth-2"></div>
       <div class="white-box1"></div>
       <div class="link-icon linkedin z-depth-2"></div>
@@ -56,8 +56,8 @@
   <div class="row intro">
     <div class="col s1"></div>
     <div class="col s10 intro-text z-depth-1">
-      <p>How do I think about Product Management?<br>
-      <span>see my process for building simple products that empower users</span>
+      <p>Headspace Feature Proposal<br>
+      <span>how to improve user retention with crowdsourced sentiment data</span>
       </p>
     </div>
     <div class="col s2"></div>
@@ -65,38 +65,38 @@
   <div class="bounce"></div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Define User Problems</h1>
+      <h1 class="z-depth-2">User Research</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin PRM</a>.</p>
+      <p>In order to design the right solution, you need to know what problem you're solving... and whose problem it is. For this project, I built a <a class="linker1" href="https://goo.gl/forms/wEdsemDeZvWMyK8U2" target="_blank">survey</a> to understand users' motivations, aspirations, challenges and pain points. Using a Facebook ad campaign, I targeted people interested in meditation to boost feedback, then loaded survey data for analysis.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-2"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-1"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-2"></div>
       </center>
     </div>
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Assess Product Opportunity</h1>
+      <h1 class="z-depth-2">User Analysis</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>In listening to our B2B customers, I found that they struggled to visualize the impact of implementing our education solutions. By translating their needs into requirements, I led my team to develop analytics products that allowed prospects to envision their roadmap to success and the results of their investments, driving higher confidence and more closed business.</p>
+      <p><a class="linker1" href="https://docs.google.com/spreadsheets/d/14LdSv71p-_gJ5PhWDTZmcei3sGDCRJ_ApLR5mcUSXt8/edit?usp=sharing" target="_blank">Analysis</a> showed that users who meditate more regularly find it easier to maintain the habit. Isolating reasons that users struggle would help to inform stronger features to promote routine. By distilling responses into composite dimensions, I found that respondents fell into one of three groups. Understanding the characteristics of each group allowed me to build personas that would become the foundation for driving higher retention.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-3"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-4"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-4"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-3"></div>
       </center>
     </div>
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Develop Product Requirements</h1>
+      <h1 class="z-depth-2">Define the Problem</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>I'm an advocate of meditation, so I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
+      <p></p>
     </div>
     <div class="col s12">
       <center>
